recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:14: error: identifier expected but ')' found.
    left(angle*2.);
                 ^